고등학교 대학교 간단 활동정리

--- a/public/markdown/workExperience/0.md
+++ b/public/markdown/workExperience/0.md
@@ -1,8 +1,9 @@
-#### Foo team
-  - 디자인 시스템 유지보수
-    - foo Component 구현
+#### 진로 사항
+  - 컴퓨터 공학과를 희망하며, 코딩을 열심히 공부함
+    - 졸업 후 관련 연구를 통해 석사학위 취득을 희망
 
-#### Bar Team
-  - Chrome Extension 개발
-    - **엄선된 원두**를 커피 전문기업의 기술로 로스팅한 **깊고 풍부한 맛**의 커피
-    - **라떼 크림**을 더하여 입안 가득 채우는 우유의 풍미와 부드러운 달콤함
+#### 학업 사항
+  - 과목별 계획과 결론
+    - **국어**를 좋아하였지만 **고전시가**등의 문학작품에 벽을 느낌
+    - **영어**를 공부하여 회화가 가능할 정도로 대화하길 희망
+    - **수학** 중 미적분에 대해 충실히 공부하지 못한 것에 대한 아쉬움
