--- a/public/markdown/workExperience/1.md
+++ b/public/markdown/workExperience/1.md
@@ -1,8 +1,8 @@
-#### Foo team
-  - 디자인 시스템 유지보수
-    - foo Component 구현
+#### 전공 관련
+  - 백준, 프로그래머스 등을 통해 파이썬과 같은 언어 공부
+    - html, css와 같은 마크업 언어도 기초 수업을 수강함
 
-#### Bar Team
-  - Chrome Extension 개발
-    - **엄선된 원두**를 커피 전문기업의 기술로 로스팅한 **깊고 풍부한 맛**의 커피
-    - **라떼 크림**을 더하여 입안 가득 채우는 우유의 풍미와 부드러운 달콤함
+#### 비교과 활동
+  - 동아리 활동
+    - **한성과 컴퓨터** 활동으로 2,3학년에 배우는 컴퓨터 구조와 자료 구조에 대해 **기본지식**을 쌓음
+    - **사진 동아리** 활동으로 여러 사람들과의 관계를 쌓아가고, 많은 명소를 구경함
