프로젝트 설명 추가

--- a/public/markdown/project/0.md
+++ b/public/markdown/project/0.md
@@ -1,7 +1,6 @@
-- Oh my, oh my God 예상했어 나
-  - I was really hoping that `he will come through`
-- Oh my, oh my God 단 너뿐이야
-  - Asking all the time about `what I should do`
-- No, I can never `let him go` 너만 생각나 `twenty-four` 난 행운아야 정말로 `I know, I know`
-- 널 알기 전까지는 나 `의미 없었어` 전부 다 **내 맘이 끝이 없는 걸** `I know, I know`
-- **I'm going crazy, right?**
+- 디자인, ppt, 개발로 분업
+  - 총괄관리를 통해 모든 분야의 지식 습득
+- 블록 코딩을 활용한 개발과정
+  - 보다 직관적인 코딩 `활용`
+- 사용자 인터페이스 설계 및 레이아웃 `디자인 능력 함양`
+-  **발표**과정을 통해 **청중**을 사로잡는 능력을 기름
