--- a/public/markdown/project/1.md
+++ b/public/markdown/project/1.md
@@ -1,7 +1,5 @@
-- **‘Cause I know what you like boy**
-- **You're my chemical `hype boy`**
-- 내 지난날들은 눈 뜨면 잊는 꿈
-  - `Hype boy` 너만 원해 `Hype boy` 내가 전해
-- And we can go high **말해봐** yeah **느껴봐** mm mm
-- Take him to the sky
-- You know I `hype you boy`
+- **정말 필요한 사람들을 위한 앱 개발**
+- 직접 수화를 배우며 청각장애인들의 생활을 몸으로써 느낌
+- 영상통화, 실제 만남 모든 순간을 위한 인공지능 번역
+  - **Teachable Machine**을 사용하여 보다 확실한 학습 결과
+- 체험과 응용을 통한 보다 더 나은 **인터페이스**
