사진 파일 설정중

--- a/public/markdown/workExperience/1.md
+++ b/public/markdown/workExperience/1.md
@@ -6,3 +6,4 @@
   - 동아리 활동
     - **한성과 컴퓨터(HSAC)** 활동으로 2,3학년에 배우는 컴퓨터 구조와 자료 구조에 대해 **기본지식**을 쌓음
     - **사진 동아리(PIG)** 활동으로 여러 사람들과의 관계를 쌓아가고, 생각이 발전해나가는 계기 
+    ![poster](images/2.jpg)
