--- a/public/markdown/workExperience/0.md
+++ b/public/markdown/workExperience/0.md
@@ -7,4 +7,4 @@
     - **국어**를 좋아하였지만 **고전시가**등의 문학작품에 벽을 느낌
     - **영어**를 공부하여 회화가 가능할 정도로 대화하길 희망
     - **수학** 중 미적분에 대해 충실히 공부하지 못한 것에 대한 아쉬움
-    ![ex_screenshot](./images/workExperience/0.jpg)
+    ![img](./images/workExperience/0.jpg){: width="100" height="100"}
