마크업 언어 배우는중(사진)

--- a/public/markdown/workExperience/0.md
+++ b/public/markdown/workExperience/0.md
@@ -4,8 +4,8 @@
 
 #### 학업 사항
   - 과목별 계획과 결론
-    - **국어**를 좋아하였지만 **고전시가**등의 문학작품에 벽을 느낌
-    - **영어**를 공부하여 회화가 가능할 정도로 대화하길 희망
-    - **수학** 중 미적분에 대해 충실히 공부하지 못한 것에 대한 아쉬움
-    <img src="/images/workExperience/0.jpg" width="100" height="100" align="left">
+    - **국어**에서 **고전시가**등의 고전문학에 어려움을 느꼈지만 **책**을 읽는 것을 좋아함
+    - **영어**를 공부하여 회화가 가능할 정도로 대화하길 희망할 정도로 열심히 공부함
+    - **수학** 중 방대한 양으로 인해 빠져들어 공부하지 못함
+    ![동아리 활동 사진](/images/workExperience/0.jpg)
 
