이미지 수정

--- a/public/markdown/workExperience/0.md
+++ b/public/markdown/workExperience/0.md
@@ -4,8 +4,8 @@
 
 #### 학업 사항
   - 과목별 계획과 결론
-    - **국어**에서 **고전시가**등의 고전문학에 어려움을 느꼈지만 **책**을 읽는 것을 좋아함
-    - **영어**를 공부하여 회화가 가능할 정도로 대화하길 희망할 정도로 열심히 공부함
-    - **수학** 중 방대한 양으로 인해 빠져들어 공부하지 못함
+    - **국어**  **책**, 특히 **산문**을 읽는 것을 좋아함
+    - **영어**  회화가 가능할 정도로 공부하고 싶음
+    - **수학**  필요할 때만 공부중
     ![동아리 활동 사진](/images/workExperience/0.jpg)
 
